add POST /metrics to swagger.yml
